maj 1 - retrait de livres

--- a/livres.html
+++ b/livres.html
@@ -101,7 +101,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 6-->
+    <!--Livre 6
     <figure>
       <a href="https://www.amazon.fr/d%C3%A9clices-36-Nicolas-Rey/dp/2368460217/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=nicolas+rey&qid=1555280726&s=gateway&sr=8-12" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91jWfWptSLL.jpg" alt="Les délices de 36" class="books" /></a>
@@ -114,7 +114,7 @@
       <figcaption>
         12,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 7-->
     <figure>
@@ -131,7 +131,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 8-->
+    <!--Livre 8
     <figure>
       <a href="https://www.amazon.fr/Lart-guerre-Traduit-comment%C3%A9-chinois/dp/2818504961?ref_=Oct_RAsinC_Ajax_301061_2&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/418CdHQ%2BkLL.jpg" alt="L'art de la Guerre" class="books" /></a>
@@ -144,7 +144,7 @@
       <figcaption>
         6,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -385,7 +385,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 24-->
+    <!--Livre 24
     <figure>
       <a href="https://www.amazon.fr/L%C3%A9quilibre-est-courage-Pierre-Villiers/dp/2213717842/ref=sr_1_16?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-16"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/7123ejxMOoL.jpg" alt="L'équilibre est un courage" class="books" /></a>
@@ -398,7 +398,7 @@
       <figcaption>
         22,50€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -779,8 +779,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 48-->
-
+    <!--Livre 48
     <figure>
       <a href="https://www.amazon.fr/Lib%C3%A9rez-votre-cerveau-Idriss-ABERKANE/dp/2221215540/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1573516992&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61ARxYzIhKL.jpg"
           alt="Libérez votre cerveau !" class="books" /></a>
@@ -793,7 +792,7 @@
       <figcaption>
         20,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -844,7 +843,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 52-->
+    <!--Livre 52
     <figure>
       <a href="https://www.amazon.fr/D%C3%A9jeuner-en-paix-Charlotte-GABRIS/dp/2749164141/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1575764282&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61hP3yb%2BayL.jpg"
           alt="Déjeuner en paix" class="books" /></a>
@@ -857,7 +856,7 @@
       <figcaption>
         17,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -879,7 +878,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 54-->
+    <!--Livre 54
     <figure>
       <a href="https://www.amazon.fr/Autopsie-sport-fran%C3%A7ais-Daniel-Riolo/dp/2755636106/ref=asap_bc?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51-XVoya8rL.jpg" alt="Autopsie du sport français"
           class="books" /></a>
@@ -892,7 +891,7 @@
       <figcaption>
         18,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 55-->
     <figure>
@@ -993,7 +992,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 61-->
+    <!--Livre 61
     <figure>
       <a href="https://www.amazon.fr/Cadrages-d%C3%A9bordements-Marc-Lievremont/dp/2732451959/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61GMm6KXJNL.jpg" alt="Lievremont"
           class="books" /></a>
@@ -1006,9 +1005,9 @@
       <figcaption>
         18,25€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 62-->
+    <!--Livre 62
     <figure>
       <a href="https://www.amazon.fr/T%C3%AAte-haute-Mathieu-BASTAREAUD/dp/2221157915/ref=pd_sim_14_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2221157915&pd_rd_r=ba4863d5-b866-4e2f-8f86-56891c02ccc8&pd_rd_w=GL8dH&pd_rd_wg=qY751&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=3KXVTV471Z9S7E4WCPX9&psc=1&refRID=3KXVTV471Z9S7E4WCPX9"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61BlyPV2aPL.jpg" alt="Mathieu Bastareaud" class="books" /></a>
@@ -1021,7 +1020,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 63-->
     <figure>
@@ -1058,7 +1057,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 65-->
+    <!--Livre 65
     <figure>
       <a href="https://www.amazon.fr/Ma-petite-%C3%A9toile-S%C3%A9bastien-Chabal/dp/208124148X/ref=pd_sim_14_8?_encoding=UTF8&pd_rd_i=208124148X&pd_rd_r=a57d9e74-2645-4b86-b2fb-ecef75dd2b1d&pd_rd_w=jHUsl&pd_rd_wg=TdRRG&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=823PM7P16X07V6XKVS45&psc=1&refRID=823PM7P16X07V6XKVS45"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vljEok2-L.jpg" alt="Chabal" class="books" /></a>
@@ -1071,9 +1070,9 @@
       <figcaption>
         20,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 66-->
+    <!--Livre 66
     <figure>
       <a href="https://www.amazon.fr/Ma-Mauvaise-r%C3%A9putation-Mourad-Boudjellal/dp/2732455199/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1582480208&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61HqFVp1hDL.jpg"
           alt="Mourad Boudjellal" class="books" /></a>
@@ -1086,9 +1085,9 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 67-->
+    <!--Livre 67
     <figure>
       <a href="https://www.amazon.fr/le%C3%A7ons-leadership-Christophe-Urios-Champion/dp/2212571399/ref=pd_sbs_14_9?_encoding=UTF8&pd_rd_i=2212571399&pd_rd_r=644e4cf9-4889-4054-94f3-40d4d065172d&pd_rd_w=FpfV7&pd_rd_wg=5Xt1u&pf_rd_p=72159c7a-2bb2-4a15-aa35-b315ce8f5c64&pf_rd_r=HV2ZNNW3WNVWJR421B66&psc=1&refRID=HV2ZNNW3WNVWJR421B66"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81cM-e-aThL.jpg" alt="Christophe Urios" class="books" /></a>
@@ -1101,9 +1100,9 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 68-->
+    <!--Livre 68
     <figure>
       <a href="https://www.amazon.fr/pr%C3%A9sident-devrait-dire-plus-souvent/dp/2221193075/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=boudjellal&qid=1582480208&s=books&sr=1-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61f0iuWp%2BmL.jpg" alt="Mourad Boudjellal" class="books" /></a>
@@ -1119,7 +1118,7 @@
       <figcaption>
         19,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -1283,7 +1282,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 79-->
+    <!--Livre 79
     <figure>
       <a href="https://www.amazon.fr/Abolish-Silicon-Valley-Technology-Capitalism/dp/1912248700/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1587736118&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91q4pnxxDiL.jpg"
           alt="Silicon Valley" class="books" /></a>
@@ -1296,9 +1295,9 @@
       <figcaption>
         13,19€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 80-->
+    <!--Livre 80
     <figure>
       <a href="https://www.amazon.fr/Give-People-Money-Universal-Revolutionize/dp/1524758760/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1587736140&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8151kosx5dL.jpg"
           alt="Give People Money" class="books" /></a>
@@ -1311,7 +1310,7 @@
       <figcaption>
         14,73€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -1383,7 +1382,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 81-->
+    <!--Livre 81
     <figure>
       <a href="https://www.amazon.fr/Soit-je-gagne-soit-japprends/dp/2259278140/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=TE4E9I3PGN6J&dchild=1&keywords=alain+jakubowicz&qid=1613398739&sprefix=alain+ja%2Caps%2C149&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61sZWNNFk1L.jpg" alt="Alain Jakubowicz" class="books" /></a>
@@ -1396,7 +1395,7 @@
       <figcaption>
         20,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 82-->
     <figure>
