grosse maj prix

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 07 novembre 2021
+    Mise à jour liste le 08 novembre 2021
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 15 juin 2021
+    Mise à jour prix le 08 novembre 2021
   </p>
 
 </body>
