--- a/livres.html
+++ b/livres.html
@@ -204,7 +204,7 @@
         Both Sides
       </figcaption>
       <figcaption>
-        13,04€
+        10,61€
       </figcaption>
     </figure>
   </div>
@@ -221,7 +221,7 @@
         Io, Giorgio
       </figcaption>
       <figcaption>
-        18,90€
+        10,01€
       </figcaption>
     </figure>
 
@@ -289,7 +289,7 @@
         Grand hotel calciomercato
       </figcaption>
       <figcaption>
-        17,00€
+        15,98€
       </figcaption>
     </figure>
 
@@ -712,7 +712,7 @@
         Mon Monde
       </figcaption>
       <figcaption>
-        Rupture de Stock
+        21,90€
       </figcaption>
     </figure>
 
@@ -744,7 +744,7 @@
         Louvre
       </figcaption>
       <figcaption>
-        18,00€
+        11,03€
       </figcaption>
     </figure>
 
@@ -760,7 +760,7 @@
         Un Cri Du Ventre
       </figcaption>
       <figcaption>
-        18,00€
+        7,50€
       </figcaption>
     </figure>
 
@@ -807,7 +807,7 @@
         Au-delà de tous mes rêves
       </figcaption>
       <figcaption>
-        19,90€
+        19,50€
       </figcaption>
     </figure>
 
@@ -938,7 +938,7 @@
         Il tempo di un lento
       </figcaption>
       <figcaption>
-        17,00€
+        9,98€
       </figcaption>
     </figure>
 
@@ -1216,7 +1216,7 @@
         Le Loup de Wall Street
       </figcaption>
       <figcaption>
-        9,20€
+        9,90€
       </figcaption>
     </figure>
 
@@ -1278,7 +1278,7 @@
         How a Person Became a User
       </figcaption>
       <figcaption>
-        24,32€
+        17,28€
       </figcaption>
     </figure>
 
@@ -1423,7 +1423,7 @@
         L'Enfer
       </figcaption>
       <figcaption>
-        10,0€
+        10,00€
       </figcaption>
     </figure>
 
@@ -1534,7 +1534,7 @@
         Le leader tranquille
       </figcaption>
       <figcaption>
-        9,50€
+        17,90€
       </figcaption>
     </figure>
 
@@ -1562,7 +1562,7 @@
         La méprise. L'affaire d'Outreau
       </figcaption>
       <figcaption>
-        Rupture de stock
+        7,20€
       </figcaption>
     </figure>
   </div>
@@ -1603,8 +1603,8 @@
 
     <!--Livre 95-->
     <figure>
-      <a href="https://www.amazon.fr/36-Histoires-poulets-dindics-tueurs/dp/2757870971/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LDREYDMD7GUC&dchild=1&keywords=patricia+tourancheau&qid=1621266154&s=books&sprefix=patricia+toura%2Cstripbooks%2C155&sr=1-2"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51Ggoofn1yL.jpg" alt="Le 36 - Histoires de poulets, d'indics et de tueurs en série" class="books" /></a>
+      <a href="https://www.amazon.fr/36-Histoires-poulets-dindics-tueurs/dp/2021356531/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1621266154&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71FPyBHH36L.jpg"
+          alt="Le 36 - Histoires de poulets, d'indics et de tueurs en série" class="books" /></a>
       <figcaption>
         Patricia Tourancheau
       </figcaption>
@@ -1615,7 +1615,7 @@
         d'indics et de tueurs en série
       </figcaption>
       <figcaption>
-        8,20€
+        22,50€
       </figcaption>
     </figure>
 
@@ -1677,7 +1677,7 @@
         Messy In The Kitchen
       </figcaption>
       <figcaption>
-        21,35€
+        23,56€
       </figcaption>
     </figure>
 
@@ -1806,6 +1806,9 @@
       <figcaption>
         à Hollywood
       </figcaption>
+      <figcaption>
+        23,00€
+      </figcaption>
     </figure>
 
     <!--Livre 107-->
@@ -1851,7 +1854,7 @@
         La mano negra
       </figcaption>
       <figcaption>
-        15,90€
+        17,00€
       </figcaption>
     </figure>
 
@@ -1939,15 +1942,12 @@
       <figcaption>
         34,95€
       </figcaption>
-      <figcaption>
-        Sortie le 14/10/21
-      </figcaption>
     </figure>
 
     <!--Livre 115-->
     <figure>
-      <a href="https://www.amazon.fr/Rise-Brand-Autobiography-Siya-Kolisi/dp/0008431337/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1633611449&sr=8-1" target="_blank"> <img
-          src="https://www.amazon.fr/images/I/81FiQbKbuuS.jpg" alt="Churchill" class="books" /></a>
+      <a href="https://www.amazon.fr/Rise-Brand-Autobiography-Siya-Kolisi/dp/0008431337/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1633611449&sr=8-1" target="_blank"> <img src="https://www.amazon.fr/images/I/81FiQbKbuuS.jpg" alt="Churchill"
+          class="books" /></a>
       <figcaption>
         Siya Kolisi
       </figcaption>
@@ -1955,14 +1955,14 @@
         Rise
       </figcaption>
       <figcaption>
-        21,71€
+        20,38€
       </figcaption>
     </figure>
 
     <!--Livre 116-->
     <figure>
-      <a href="https://www.amazon.fr/Tyson-Fury-autobiographie-TYSON-FURY/dp/2501155114/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1633884966&sr=8-1" target="_blank"> <img src="https://www.amazon.fr/images/I/91UP-+hdBiL.jpg"
-          alt="3000 giorni" class="books" /></a>
+      <a href="https://www.amazon.fr/Tyson-Fury-autobiographie-TYSON-FURY/dp/2501155114/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1633884966&sr=8-1" target="_blank"> <img src="https://www.amazon.fr/images/I/91UP-+hdBiL.jpg" alt="3000 giorni"
+          class="books" /></a>
       <figcaption>
         Tyson Fury
       </figcaption>
