--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="#" target="_blank"> <img src="https://m.media-amazon.com/images/I/71-o7Rap2HL._AC_SL1378_.jpg" alt="CoD" class="game" /></a>
       <figcaption>
@@ -31,7 +31,7 @@
       <figcaption>
         80€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2-->
     <figure>
