--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://www.amazon.fr/Friends-Lint%C3%A9grale-Saisons-10-%C3%89dition-25%C3%A8me-Anniversaire/dp/B07T2H6SWY/ref=tmm_blu_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/61qropy1d-S._AC_SL1000_.jpg" alt="Friends" class="others" /></a>
@@ -34,9 +34,9 @@
       <figcaption>
         84,75€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=integrale+game+of+thrones&qid=1632925004&sr=8-2" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
@@ -49,7 +49,7 @@
       <figcaption>
         84,98€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 3-->
     <figure>
@@ -80,7 +80,7 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 5-->
+    <!--Autres 5
     <figure>
       <a href="https://www.amazon.fr/Logitech-G240-Tapis-Souris-Noir/dp/B01DIJIDKI/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1MLF728ZWY84T&keywords=tapis%2Bde%2Bsouris%2Blogitech&qid=1636725786&sprefix=tapis%2Bde%2Bsouris%2Blogi%2Caps%2C169&sr=8-5&th=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/51ODqiGzr7L._AC_SL1500_.jpg" alt="Tapis de souris" class="others" /></a>
@@ -93,7 +93,7 @@
       <figcaption>
         15,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 6
     <figure>
