--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 17 novembre 2021
+    Mise à jour liste le 26 décembre 2021
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 08 novembre 2021
