--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -33,7 +33,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 2-->
+    <!--Jeu 2
     <figure>
       <a href="#" target="_blank"> <img src="https://image.jeuxvideo.com/medias/159221/1592210734-3246-jaquette-avant.jpg" alt="Icarus" class="game" /></a>
       <figcaption>
@@ -45,7 +45,7 @@
       <figcaption>
         A payer moi-même
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 3
     <figure>
