--- a/livres.html
+++ b/livres.html
@@ -225,7 +225,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 14-->
+    <!--Livre 14
     <figure>
       <a href="https://www.amazon.fr/Tr%C3%B4ne-fer-lInt%C3%A9grale-Thrones-Tomes/dp/2756408417/ref=pd_bxgy_14_img_2/257-1218540-6150940?_encoding=UTF8&pd_rd_i=2756408417&pd_rd_r=7ecd5aa1-609d-11e9-95e3-e947cfa1b065&pd_rd_w=r0YsU&pd_rd_wg=mHBVF&pf_rd_p=e6148c64-3e38-4dde-b49b-61e5910a29fa&pf_rd_r=12EF5BCCXCK62YYDSA2J&psc=1&refRID=12EF5BCCXCK62YYDSA2J"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81Svq8FcIhL.jpg" alt="L'intégrale du Trône de Fer - Partie 4" class="books" /></a>
@@ -241,7 +241,7 @@
       <figcaption>
         22,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 15-->
     <figure>
@@ -432,7 +432,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 27-->
+    <!--Livre 27
     <figure>
       <a href="https://www.amazon.fr/vagabond-passe-sous-ombrelle-trou%C3%A9e/dp/2070373193/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559690584&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/811RkX2rtaL.jpg"
           alt="Le vagabond qui passe sous une ombrelle trouée" class="books" /></a>
@@ -448,7 +448,7 @@
       <figcaption>
         8,60€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 28-->
     <figure>
@@ -467,7 +467,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 29-->
+    <!--Livre 29
     <figure>
       <a href="https://www.amazon.fr/dictionnaire-ma-vie-Eric-Dupond-Moretti/dp/2290173959/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1609030877&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Mvw3X3V3L.jpg"
           alt="Une fête en larmes" class="books" /></a>
@@ -480,9 +480,9 @@
       <figcaption>
         6,70€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 30-->
+    <!--Livre 30
     <figure>
       <a href="https://www.amazon.fr/dirai-malgr%C3%A9-tout-cette-belle/dp/2072823870/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559690619&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sKOtroNML.jpg"
           alt="Je dirai malgré tout que cette vie fut belle" class="books" /></a>
@@ -498,7 +498,7 @@
       <figcaption>
         8,60€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 31-->
     <figure>
@@ -811,7 +811,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 50-->
+    <!--Livre 50
     <figure>
       <a href="https://www.amazon.fr/Testament-marin-Olivier-Kersauson/dp/2749149347/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3GBHTVT7MA1WJ&keywords=olivier+de+kersauson&qid=1574555953&sprefix=olivier+de+k%2Caps%2C143&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61xFgIgyTjL.jpg" alt="Kersauson" class="books" /></a>
@@ -827,7 +827,7 @@
       <figcaption>
         18,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 51-->
     <figure>
@@ -1749,7 +1749,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 104-->
+    <!--Livre 104
     <figure>
       <a href="https://www.amazon.fr/Orl%C3%A9ans-roman-Yann-Moix/dp/2246820510/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=yann+moix&qid=1628692662&sr=8-2" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61aGFWp0-ML.jpg" alt="Orléans" class="books" /></a>
@@ -1768,11 +1768,11 @@
       <figcaption>
         (seulement 2 parus)
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
-    <!--Livre 105-->
+    <!--Livre 105
     <figure>
       <a href="https://www.amazon.fr/Reims-Yann-Moix/dp/2246823447/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=yann+moix&qid=1628692662&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61G2iydjLyL.jpg" alt="Reims" class="books" /></a>
@@ -1791,7 +1791,7 @@
       <figcaption>
         (seulement 2 parus)
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 106-->
     <figure>
@@ -1944,7 +1944,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 115-->
+    <!--Livre 115
     <figure>
       <a href="https://www.amazon.fr/Rise-Brand-Autobiography-Siya-Kolisi/dp/0008431337/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1633611449&sr=8-1" target="_blank"> <img src="https://www.amazon.fr/images/I/81FiQbKbuuS.jpg" alt="Churchill"
           class="books" /></a>
@@ -1957,9 +1957,9 @@
       <figcaption>
         20,38€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 116-->
+    <!--Livre 116
     <figure>
       <a href="https://www.amazon.fr/Tyson-Fury-autobiographie-TYSON-FURY/dp/2501155114/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1633884966&sr=8-1" target="_blank"> <img src="https://www.amazon.fr/images/I/91UP-+hdBiL.jpg" alt="3000 giorni"
           class="books" /></a>
@@ -1972,7 +1972,7 @@
       <figcaption>
         20,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
