--- a/autres.html
+++ b/autres.html
@@ -21,35 +21,35 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
-      <a href="https://www.amazon.fr/Friends-Lint%C3%A9grale-Saisons-10-%C3%89dition-25%C3%A8me-Anniversaire/dp/B07T2H6SWY/ref=tmm_blu_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/61qropy1d-S._AC_SL1000_.jpg" alt="Friends" class="others" /></a>
+      <a href="https://www.amazon.fr/Esprits-criminels-Saison-Matthew-Gray-Gubler/dp/B07W6CDN5Y/ref=sr_1_2?keywords=esprits+criminels+saison+15&qid=1641825568&sprefix=esprits+cr%2Caps%2C80&sr=8-2" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61j-p9BlUbS._AC_SL1000_.jpg" alt="Esprits Criminels 14" class="others" /></a>
       <figcaption>
-        Friends - l'intégrale en BluRay
+        Esprits Criminels
       </figcaption>
       <figcaption>
-        Edition 25 ans
+        Saison 14
       </figcaption>
       <figcaption>
-        84,75€
+        14,77€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 2
+    <!--Autres 2-->
     <figure>
-      <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=integrale+game+of+thrones&qid=1632925004&sr=8-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
+      <a href="https://www.amazon.fr/Esprits-Criminels-Saison-15-DVD/dp/B08JDTNP9V/ref=sr_1_1?keywords=esprits+criminels+saison+15&qid=1641825568&sprefix=esprits+cr%2Caps%2C80&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/91i3HLDQkZL._AC_SL1500_.jpg" alt="Esprits Criminels 15" class="others" /></a>
       <figcaption>
-        Game of Thrones
+        Esprits Criminels
       </figcaption>
       <figcaption>
-        L'intégrale en BluRay
+        Saison 15
       </figcaption>
       <figcaption>
-        84,98€
+        19,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 3-->
     <figure>
@@ -66,7 +66,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
       <a href="https://www.amazon.fr/Calendario-geniale-condividi-pensieri-filosofici/dp/8863865973/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=calendario+geniale&qid=1629199765&sr=8-4" target="_blank"> <img
           src="https://www.amazon.fr/images/I/61jheIZgSCL.jpg" alt="Calendario" class="others" /></a>
@@ -76,7 +76,7 @@
       <figcaption>
         13,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="othersLine">
