--- a/autres.html
+++ b/autres.html
@@ -66,17 +66,17 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
-      <a href="https://www.amazon.fr/Calendario-geniale-condividi-pensieri-filosofici/dp/8863865973/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=calendario+geniale&qid=1629199765&sr=8-4" target="_blank"> <img
-          src="https://www.amazon.fr/images/I/61jheIZgSCL.jpg" alt="Calendario" class="others" /></a>
+      <a href="https://www.amazon.fr/PlayStation-officielle-DualSense-rechargeable-Compatible/dp/B08H99BPJN/ref=pd_vtp_2/257-9479405-0879257?pd_rd_w=x9oiX&pf_rd_p=ae9723b3-1b9c-43b5-84ad-70af60d95378&pf_rd_r=0MKVP2P2297EBGMKPQ1B&pd_rd_r=de36e16f-0c13-4c40-9650-912e6f5c7ad9&pd_rd_wg=LpinP&pd_rd_i=B08H99BPJN&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71lPDuOqgKL._AC_SL1500_.jpg" alt="Manette" class="others" /></a>
       <figcaption>
-        Calendario ingeniale 2022
+        Manette PS5
       </figcaption>
       <figcaption>
-        13,90€
+        69,13€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="othersLine">
