--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,30 +22,27 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://m.media-amazon.com/images/I/71-o7Rap2HL._AC_SL1378_.jpg" alt="CoD" class="game" /></a>
+      <a href="https://www.amazon.fr/Gran-Turismo-7-PlayStation-5/dp/B09H2P828W/ref=sr_1_1_sspa?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=183F63X1ZK8I3&keywords=gt7&qid=1648822103&sprefix=gt7%2Caps%2C87&sr=8-1-spons&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzS0o3MEFYN05EWFdMJmVuY3J5cHRlZElkPUEwMjE5NjIzTVkzVlNETkNPQUdOJmVuY3J5cHRlZEFkSWQ9QTAwNTIwNzMyTTBWR0E4TkxTRUw5JndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ&th=1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81a31luMs9L._AC_SL1500_.jpg" alt="Gran Turismo 7" class="game" /></a>
       <figcaption>
-        Call of Duty Vanguard
+        Gran Turismo 7
       </figcaption>
       <figcaption>
-        80€
+        61,49€€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://image.jeuxvideo.com/medias/159221/1592210734-3246-jaquette-avant.jpg" alt="Icarus" class="game" /></a>
+      <a href="https://www.amazon.fr/MarvelS-Guardians-Galaxy-PlayStation-5/dp/B0977PRVPM/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2GMFYLQ2OL6OC&keywords=gardiens+de+la+galaxie+ps5&qid=1648822126&sprefix=gardiens+de+la+galaxie+ps5%2Caps%2C67&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71zjYjmnF7L._AC_SL1000_.jpg" alt="Gardiens de la Galaxie" class="game" /></a>
       <figcaption>
-        Icarus
+        Gardiens de la Galaxie
       </figcaption>
       <figcaption>
-        25€ sur Steam
+        50,11€
       </figcaption>
-      <figcaption>
-        A payer moi-même
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 3
     <figure>
