maj prix + suppression

--- a/livres.html
+++ b/livres.html
@@ -32,7 +32,7 @@
         La Société du Spectacle
       </figcaption>
       <figcaption>
-        6,90€
+        7,00€
       </figcaption>
     </figure>
 
@@ -139,7 +139,7 @@
         L'art de la guerre
       </figcaption>
       <figcaption>
-        6,90€
+        6,80€
       </figcaption>
     </figure>
   </div>
@@ -177,7 +177,7 @@
 
     <!--Livre 11-->
     <figure>
-      <a href="https://www.amazon.fr/L%C3%89nigme-Chambre-622-Jo%C3%ABl-Dicker/dp/B0833XMR6L/ref=sr_1_93?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407029&refinements=p_72%3A184904031&s=books&sr=1-93"
+      <a href="https://www.amazon.fr/LEnigme-chambre-622-Jo%C3%ABl-Dicker/dp/2889730158/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1605407029&sr=1-93"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sLRAyASzL.jpg" alt="L'Énigme de la Chambre 622" class="books" /></a>
       <figcaption>
         Joël Dicker
@@ -221,7 +221,7 @@
         Io, Giorgio
       </figcaption>
       <figcaption>
-        10,01€
+        7,16€
       </figcaption>
     </figure>
 
@@ -266,7 +266,7 @@
         La Fêlure
       </figcaption>
       <figcaption>
-        7,50€
+        7,60€
       </figcaption>
     </figure>
   </div>
@@ -298,7 +298,7 @@
         Combien veux-tu m'épouser ?
       </figcaption>
       <figcaption>
-        17,90€
+        13,80€
       </figcaption>
     </figure>
 
@@ -328,7 +328,7 @@
         Sa mère
       </figcaption>
       <figcaption>
-        19,00€
+        15,78€
       </figcaption>
     </figure>
   </div>
@@ -349,7 +349,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 22-->
+    <!--Livre 22
     <figure>
       <a href="https://www.amazon.fr/Friends-cuisine-officiel-Amanda-Yee/dp/B08FKLN24H/ref=sr_1_32?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406857&refinements=p_72%3A184904031&s=books&sr=1-32"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71iD6X5q-hL.jpg" alt="Recettes Friends" class="books" /></a>
@@ -362,7 +362,7 @@
       <figcaption>
         29,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 23
     <figure>
@@ -458,7 +458,7 @@
         C'était bien
       </figcaption>
       <figcaption>
-        8,60€
+        8,70€
       </figcaption>
     </figure>
   </div>
@@ -526,7 +526,7 @@
         Au plaisir de Dieu
       </figcaption>
       <figcaption>
-        10,30€
+        10,40€
       </figcaption>
     </figure>
   </div>
@@ -543,7 +543,7 @@
         La gloire de l'Empire
       </figcaption>
       <figcaption>
-        12,90€
+        13,00€
       </figcaption>
     </figure>
 
@@ -558,7 +558,7 @@
         Histoire du Juif errant
       </figcaption>
       <figcaption>
-        10,30€
+        10,40€
       </figcaption>
     </figure>
 
@@ -608,7 +608,7 @@
         Into the wild
       </figcaption>
       <figcaption>
-        7,50€
+        7,60€
       </figcaption>
     </figure>
 
@@ -623,11 +623,11 @@
         L'amour de la Vie
       </figcaption>
       <figcaption>
-        7,50€
+        7,60€
       </figcaption>
     </figure>
 
-    <!--Livre 39-->
+    <!--Livre 39
     <figure>
       <a href="https://www.amazon.fr/Cassez-baraque-Capitalisez-sur-passions/dp/2744067083/ref=pd_sim_nf_14_5/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2744067083&pd_rd_r=74e18d95-1a65-4c61-890b-33b91d25f908&pd_rd_w=kYCPu&pd_rd_wg=7lqKc&pf_rd_p=989549ee-b4b9-468d-9113-731b03560554&pf_rd_r=R9FY5G6G9SM9S5Y5XKM6&psc=1&refRID=R9FY5G6G9SM9S5Y5XKM6"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81Tq4TVUGrL.jpg" alt="Cassez la baraque !" class="books" /></a>
@@ -643,9 +643,9 @@
       <figcaption>
         22,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 40-->
+    <!--Livre 40
     <figure>
       <a href="https://www.amazon.fr/Jordan-Belfort-loup-Wall-Street/dp/2378150946/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81ClhjnocnL.jpg"
           alt="Vendre: Les secrets de ma méthode" class="books" /></a>
@@ -661,7 +661,7 @@
       <figcaption>
         17,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -741,7 +741,7 @@
         Louvre
       </figcaption>
       <figcaption>
-        11,03€
+        11,09€
       </figcaption>
     </figure>
 
@@ -772,7 +772,7 @@
         Carton jaune
       </figcaption>
       <figcaption>
-        7,50€
+        7,60€
       </figcaption>
     </figure>
 
@@ -804,7 +804,7 @@
         Au-delà de tous mes rêves
       </figcaption>
       <figcaption>
-        19,50€
+        13,99€
       </figcaption>
     </figure>
 
@@ -819,7 +819,7 @@
         La mano negra
       </figcaption>
       <figcaption>
-        17,00€
+        16,00€
       </figcaption>
     </figure>
 
@@ -872,7 +872,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 54-->
+    <!--Livre 54
     <figure>
       <a href="https://www.amazon.fr/Adil-Rami-Autopsie/dp/2755647515/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=adil+rami&qid=1629218689&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71c7hfnjzyL.jpg" alt="Adil Rami" class="books" /></a>
@@ -885,9 +885,9 @@
       <figcaption>
         19,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 55-->
+    <!--Livre 55
     <figure>
       <a href="https://www.amazon.fr/L%C3%A9nigme-Tuchel-Daniel-Riolo/dp/2755640626/ref=asap_bc?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61XqB3uql4L.jpg" alt="L'énigme Tuchel" class="books" /></a>
       <figcaption>
@@ -899,7 +899,7 @@
       <figcaption>
         16,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 56-->
     <figure>
@@ -932,7 +932,7 @@
         Il tempo di un lento
       </figcaption>
       <figcaption>
-        9,98€
+        11,00€
       </figcaption>
     </figure>
 
@@ -947,7 +947,7 @@
         Retour intérieur
       </figcaption>
       <figcaption>
-        7,20€
+        Rupture de stock
       </figcaption>
     </figure>
 
@@ -980,7 +980,7 @@
         des All Blacks
       </figcaption>
       <figcaption>
-        15,09€
+        Rupture de stock
       </figcaption>
     </figure>
   </div>
@@ -1087,7 +1087,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 67-->
+    <!--Livre 67
     <figure>
       <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
@@ -1100,7 +1100,7 @@
       <figcaption>
         23,56€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 68-->
     <figure>
@@ -1284,7 +1284,7 @@
         How a Person Became a User
       </figcaption>
       <figcaption>
-        17,28€
+        20,36€
       </figcaption>
     </figure>
 
@@ -1417,7 +1417,7 @@
         L'Adversaire
       </figcaption>
       <figcaption>
-        6,90€
+        7,00€
       </figcaption>
     </figure>
 
@@ -1436,7 +1436,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 84-->
+    <!--Livre 84
     <figure>
       <a href="https://www.amazon.fr/Mourad-Boudjellal-Jen-savais-trop/dp/2263172149/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=mourad+j%27en+savais+trop&qid=1613399144&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81WpAkF0vHL.jpg" alt="J'en savais trop" class="books" /></a>
@@ -1449,7 +1449,7 @@
       <figcaption>
         18,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -1543,7 +1543,7 @@
         Le leader tranquille
       </figcaption>
       <figcaption>
-        17,90€
+        19,95€
       </figcaption>
     </figure>
 
@@ -1904,7 +1904,7 @@
       <a href="https://www.amazon.fr/Nordahl-Lelandais-proc%C3%A8s-Noyer-Ma%C3%ABlys/dp/2268106713/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2DUNSHV14QT0F&keywords=Aude+Bariety+-+Nordal+Lelandais&qid=1650636389&sprefix=aude+bariety+-+nordal+lelandais%2Caps%2C59&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61FBBfiS9RL.jpg" alt="Nordahl Lelandais" class="books" /></a>
       <figcaption>
-        Les Cahiers du Foot
+         Aude Bariéty
       </figcaption>
       <figcaption>
         Du procès Noyer
