--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 03 février 2022
+    Mise à jour liste le 22 avril 2022
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 08 novembre 2021
+    Mise à jour prix le 22 avril 2022
   </p>
 
 </body>
