--- a/livres.html
+++ b/livres.html
@@ -3173,20 +3173,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Fureur-Myst%C3%A8re-Ren%C3%A9-Char/dp/207030065X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650632296&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qJtle6vvL.jpg" alt="Fureur et Mystère" class="books" /></a>
+      <a href="https://www.amazon.fr/Landru-L%C3%A9l%C3%A9gance-assassine-Bruno-Fuligni/dp/2268104133/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1650753622&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81HndU9ttsL.jpg" alt="Landru: L'élégance assassine" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Bruno Fuligni
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Landru:L'élégance assassine
       </figcaption>
       <figcaption>
-        19,90€
+        18,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
