--- a/livres.html
+++ b/livres.html
@@ -3188,52 +3188,52 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Chiens-paille-Pierre-Drieu-Rochelle/dp/2070753158/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1651014877&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/31-HyUnWveL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Renee Paquette
+         Pierre Drieu la Rochelle
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Les Chiens de paille
       </figcaption>
       <figcaption>
-        23,56€
+        7,80€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Chute-maison-Usher-autres-nouvelles/dp/2369146109/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1BPSN9ZFTWYKT&keywords=la+chute+de+la+maison+usher+poche&qid=1651155315&sprefix=la+chute+de+la+maison+usher+poche%2Caps%2C65&sr=8-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/41WTHzslurL.jpg" alt="La Chute de la maison Usher" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Edgar Allan Poe
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        La Chute de la maison Usher
       </figcaption>
       <figcaption>
-        35,00€
+        11,30€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/LOrange-m%C3%A9canique-Anthony-BURGESS/dp/2221198360/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1BM5VT8G389QN&keywords=orange+mecanique+poche&qid=1651014788&sprefix=orange+%C3%B9ecanique+poche%2Caps%2C59&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61G+Id4yVlL.jpg" alt="L'Orange mécanique" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Anthony Burgess
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        L'Orange mécanique
       </figcaption>
       <figcaption>
-        17,90€
+        9,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98
     <figure>
