--- a/livres.html
+++ b/livres.html
@@ -3235,67 +3235,67 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Scottie-Pippen-Lib%C3%A9r%C3%A9/dp/2755694459/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=KF6OQKIR1G0M&keywords=scottie+pippen&qid=1651195243&sprefix=scottie%2520pippen%2Caps%2C63&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Ot1gl9XlL.jpg" alt="Scottie Pippen - Libéré" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Scottie Pippen
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Libéré
       </figcaption>
       <figcaption>
-        19,90€
+        21,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/LEnfer-Roman-dHenri-Barbusse-paru/dp/B08YQR3ZFQ/ref=sr_1_1?keywords=l%27enfer+henri+barbusse&qid=1651195255&sprefix=l%27enfer+henri+b%2Caps%2C67&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81Le7-7qN2L.jpg" alt="L'Enfer: Roman d'Henri Barbusse" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Henri Barbusse
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        L'Enfer
       </figcaption>
       <figcaption>
-        23,56€
+        9,95€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Feu-journal-dune-escouade/dp/1521839360/ref=sr_1_5?keywords=le+feu+barbusse&qid=1651195266&sprefix=le+feu+ba%2Caps%2C67&sr=8-5" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/51fSyjOyozL.jpg" alt="Le Feu: journal d’une escouade" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Henri Barbusse
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Le Feu
       </figcaption>
       <figcaption>
-        35,00€
+        11,57€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/b%C3%BBcher-vanit%C3%A9s-Tom-Wolfe/dp/2253053406/ref=sr_1_1?keywords=le+bucher+des+vanites&qid=1651195280&sprefix=le+buche%2Caps%2C66&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71yf+420gaL.jpg" alt="Le bûcher des vanités" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Tom Wolfe
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Le bûcher des vanités
       </figcaption>
       <figcaption>
-        17,90€
+        10,40€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98
     <figure>
