--- a/livres.html
+++ b/livres.html
@@ -2188,16 +2188,16 @@
 
     <!--Livre 114-->
     <figure>
-      <a href="https://www.amazon.fr/P%C3%A8re-Goriot-Honore-Balzac/dp/2253085790/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3LP0NMUUX004T&keywords=goriot+poche&qid=1650317371&sprefix=goriot+poche%2Caps%2C66&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81jmppwxtSL.jpg" alt="Le Père Goriot" class="books" /></a>
+      <a href="https://www.amazon.fr/LAFFAIRE-DAN-COOPER-MIKA%C3%8FLOFF-PIERRE/dp/2358877441/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3TCQFHT1RH740&keywords=l%27affaire+dan+cooper&qid=1652367257&sprefix=l%27affaire+dan+cooper%2Caps%2C76&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51wKoRHcNJL.jpg" alt="L'AFFAIRE DAN COOPER" class="books" /></a>
       <figcaption>
-        Balzac
+        Pierre Mikaïloff
       </figcaption>
       <figcaption>
-        Le Père Goriot
+        L'affaire Dan Cooper
       </figcaption>
       <figcaption>
-        3,00€
+        19,90€
       </figcaption>
     </figure>
 
@@ -3297,20 +3297,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Serpe-Philippe-Jaenada/dp/2757883127/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1651962755&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61IpAg3JaFL.jpg" alt="La Serpe" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Philippe Jaenada
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        La Serpe
       </figcaption>
       <figcaption>
-        19,90€
+        9,20€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
